2004-08-19  Roland Illig  <roland.illig@gmx.de>

	* extfs/deb.in (mcdebfs_list): Separated the use of quoted and
	unquoted variables. (mcdebfs_copyout): likewise.
	(mcdebfs_run): likewise.
	
	From Leonard den Ottolander <leonard@den.ottolander.nl>

2004-08-19  Roland Illig  <roland.illig@gmx.de>

	* extfs/deba.in (list): Separated the use of quoted and unquoted
	variables. (copyout): likewise. (run): likewise.
	
	From Leonard den Ottolander <leonard@den.ottolander.nl>

2004-08-19  Roland Illig  <roland.illig@gmx.de>

	* extfs/deba.in (bt): deleted. (ft): deleted. (fm): deleted.
	(ls): deleted. (list): correctly quoted shell command arguments.
	(copyout): likewise. (run): likewise.
	
	From Leonard den Ottolander <leonard@den.ottolander.nl>

2004-08-19  Roland Illig  <roland.illig@gmx.de>

	* smbfs.c: Modified smbfs_convert_path based on a patch sent by
	Andrew V. Samoilov. Adjusted the calls to smbfs_convert_path.
	Simplified string handling by using free_after from src/util.h.
	Fixed one memory leak and one accidental modification.

2004-08-18  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs/rpm: Command line parameters fix for UPGRADE.
	Fix mcrpmfs_copyout for INFO/OBSOLETES and INFO/LICENSE 

	From Leonard den Ottolander <leonard@den.ottolander.nl>

2004-08-16  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs/deb.in: Security fix patch. Fix insecure temporary file and 
	directory creations. (CAN-2004-0231).

        * extfs/uar.in: Likewise.
	* extfs/uha.in: Likewise.
	* extfs/ulha.in: Likewise.
        * extfs/urar.in: Likewise.
        * extfs/uzip.in: Likewise.
        * extfs/uzoo.in: Likewise.

2004-08-14  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* extfs.c (extfs_init): Fix possible off-by-one buffer underflow
	for empty lines in extfs.ini.
	* sfs.c (sfs_init): Fix possible buffer overflows for invalid sfs.ini.

2004-06-14  Pavel Roskin  <proski@gnu.org>

	* tar.c: Eliminate struct hstat, use stack arguments instead.
