@@ -1,3 +1,8 @@
+2004-08-21  Pavel S. Shirshov  <pavelsh@mail.ru>
+
+	* samba/lib/util.c (tmpdir): Use MC_TMPDIR environment variable.
+	(automount_lookup): More secure code.
+
 2004-08-19  Roland Illig  <roland.illig@gmx.de>
 
 	* extfs/deb.in (mcdebfs_list): Separated the use of quoted and
